# CFDSolver

./: Build.sh  CMakeLists.txt  main.cpp
Core/Boundary/: BoundaryCondition.hpp  BoundarySetter.hpp  CMakeLists.txt  Direchlet.hpp  Neuman.hpp
Core/FVM/: CMakeLists.txt  Divergence.cpp  Divergence.hpp  Gradient.cpp  Gradient.hpp  Laplacian.cpp  Laplacian.hpp  VectorNt.hpp
Core/Math/: BasicOperations.hpp
Core/Mesh/: CMakeLists.txt  Cell.hpp  Face.cpp  Face.hpp  Field.hpp  Node.cpp  Node.hpp  StructuredMesh.cpp  StructuredMesh.hpp
Core/Tests/: BasicOperationsTest.hpp  BoundaryConditionTests.hpp  CMakeLists.txt  DivergenceTests.hpp  FieldTests.hpp  GradientTests.hpp  LaplacianTests.hpp  MeshTests.hpp  UnitTests.cpp  VectorNtTests.hpp
